fix(menu) Higher menu contrast

--- a/site/web/app/themes/sage/assets/styles/layouts/_header.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_header.scss
@@ -57,12 +57,13 @@ button.navbar-toggler .navbar-toggler-icon {
 }
 
 .navbar .menu-item a {
-  color: #f9aaaa;
+  color: #ffc;
   padding-bottom: 10px;
-  margin-right: 25px;
+  margin-right: 45px;
   text-transform: uppercase;
   font-size: 14px;
   text-decoration: none;
+  letter-spacing: 1px;
 }
 
 .navbar .menu-item:last-child a {
